# latex-merge-changes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-uv-publish.yml
src/latex_merge_changes/: commands.py  core.py
tests/: test1.tex
