[project]
name = "latex-merge-changes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "浩瀚猫", email = "howcanoewang@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
latex-merge-changes = "latex_merge_changes:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
